src/ssrq_editio/entrypoints/app/static/css/src/components/popup.css
@layer components {
  .popup {
    @apply inline relative;
  }

  .popup > summary {
    @apply list-none cursor-pointer;
  }

  .popup.has-border > summary {
    @apply pb-[0.5px] border-b-black border-dotted border-b-[1px] w-fit;
  }

  .popup > summary::-webkit-details-marker,
  .popup > summary::marker {
    @apply hidden;
  }

  .popup > div.popup-body {
    @apply absolute bg-white border rounded-md p-4 text-black text-sm z-50 shadow-sm;
  }

  .popup > div.popup-body.has-marker {
    top: calc(100% + 0.5rem);
  }

  .popup > div.popup-body.has-marker::before {
    content: '';
    @apply absolute border-l-8 border-r-8 border-b-8 border-l-transparent border-r-transparent border-b-white top-[-8px] z-50 left-2;
  }

  .popup > div.popup-body.has-marker::after {
    content: '';
    @apply absolute border-l-8 border-r-8 border-b-8 border-l-transparent border-r-transparent border-b-gray-300 top-[-9px] left-2;
    z-index: -1;
  }
}

